<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.apicatalog</groupId>
    <artifactId>iridium-cbor-ld</artifactId>
    <version>0.8.0-SNAPSHOT</version>

    <packaging>jar</packaging>
    <name>Iridium CBOR-LD</name>

    <url>https://github.com/filip26/iridium-cbor-ld</url>
    <scm>
        <connection>scm:git:git://github.com/filip26/iridium-cbor-ld.git</connection>
        <developerConnection>
            scm:git:git://github.com/filip26/iridium-cbor-ld.git</developerConnection>
        <url>https://github.com/filip26/iridium-cbor-ld/tree/main</url>
    </scm>

    <description>
        A CBOR-based serialization for Linked Data
    </description>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <issueManagement>
        <system>github</system>
        <url>https://github.com/filip26/iridium-cbor-ld/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <id>filip26</id>
            <name>Filip Kolarik</name>
            <email>filip26@gmail.com</email>
            <roles>
                <role>author</role>
            </roles>
        </developer>
    </developers>

    <inceptionYear>2022</inceptionYear>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <argLine>-Dfile.encoding=UTF-8</argLine>

        <titanium.version>2.0.0-M2-SNAPSHOT</titanium.version>
        <tree.version>0.12.0-SNAPSHOT</tree.version>
        <copper-multibase>4.1.0</copper-multibase>
        <jakarta.json.version>2.0.1</jakarta.json.version>

        <!-- test resources -->
        <junit.version>6.0.1</junit.version>
        <jakarta.json.version>2.0.1</jakarta.json.version>
        
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.apicatalog</groupId>
            <artifactId>titanium-json-ld</artifactId>
            <version>${titanium.version}</version>
        </dependency>

        <dependency>
            <groupId>com.apicatalog</groupId>
            <artifactId>tree-io-api</artifactId>
            <version>${tree.version}</version>
        </dependency>

        <dependency>
            <groupId>com.apicatalog</groupId>
            <artifactId>tree-io-jakarta</artifactId>
            <version>${tree.version}</version>
        </dependency>

        <dependency>
            <groupId>com.apicatalog</groupId>
            <artifactId>tree-io-cbor</artifactId>
            <version>${tree.version}</version>
        </dependency>

        <dependency>
            <groupId>jakarta.json</groupId>
            <artifactId>jakarta.json-api</artifactId>
            <version>${jakarta.json.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.apicatalog</groupId>
            <artifactId>copper-multibase</artifactId>
            <version>${copper-multibase}</version>
        </dependency>

        <!-- Tests -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>jakarta.json</artifactId>
            <version>${jakarta.json.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.12.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <failOnWarnings>false</failOnWarnings>
                    <additionalOptions>
                        <additionalOption>-Xdoclint:none</additionalOption>
                    </additionalOptions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.14</version>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.5.4</version>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>maven-central</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.8</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                   <plugin>
                      <groupId>org.sonatype.central</groupId>
                      <artifactId>central-publishing-maven-plugin</artifactId>
                      <version>0.9.0</version>
                      <extensions>true</extensions>
                      <configuration>
                        <publishingServerId>central</publishingServerId>
                        <autoPublish>true</autoPublish>
                      </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
